modified setup